--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
             android:label="Register Page">
         </activity>
         <activity android:name=".AddStoreActivity" />
+        <activity android:name=".StorePageActivity" />
 
     </application>
 
