Update - thêm phần xử lí product của từng store

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         </activity>
         <activity android:name=".AddStoreActivity" />
         <activity android:name=".StorePageActivity" />
+        <activity android:name=".ProductPageActivity" />
 
     </application>
 
