--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".OrderProductActivity" />
         <activity android:name=".CartListActivity" />
         <activity android:name=".OrderHistoryActivity" />
+        <activity android:name=".EditProductActivity" />
 
     </application>
 
