--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".CartListActivity" />
         <activity android:name=".OrderHistoryActivity" />
         <activity android:name=".EditProductActivity" />
+        <activity android:name=".OrderDetailActivity" />
 
     </application>
 
